<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <data>
        <variable
            name="steps"
            type="xyz.godi.bakingapp.models.Steps"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_video_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="411dp"
            android:contentDescription="@string/thumbnail_image"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_no_video"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="411dp"
            android:background="@android:color/black"
            android:gravity="center"
            android:text="@string/video_not_available"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3sp"
            android:padding="24dp"
            android:text="@{steps.description}"
            android:textAllCaps="false"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:context="ui.fragments.StepDetailsFragment"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam interdum justo at diam varius, a commodo dolor consequat. Maecenas feugiat at lorem accumsan finibus. In efficitur quam ut sodales pretium." />


        <Button
            android:id="@+id/btn_previous_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="177dp"
            android:layout_marginBottom="16dp"
            android:text="@string/previous_step"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_step_description" />

        <Button
            android:id="@+id/btn_next_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="177dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/next"
            android:text="@string/next_step"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_step_description" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="244dp"
            android:text="@string/step_description"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exo_player_view" />

    </android.support.constraint.ConstraintLayout>

</layout>