<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_previous_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@android:color/black" />

            <ImageView
                android:id="@+id/iv_video_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/thumbnail_image"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_no_video"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@android:color/black"
                android:gravity="center"
                android:text="@string/video_not_available"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_step_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:padding="24dp"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam interdum justo at diam varius, a commodo dolor consequat. Maecenas feugiat at lorem accumsan finibus. In efficitur quam ut sodales pretium." />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/iv_previous_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        app:srcCompat="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/previous" />

    <ImageView
        android:id="@+id/iv_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        app:srcCompat="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/next" />

</android.support.constraint.ConstraintLayout>